# chip_8_emulator

./: CMakeLists.txt
Source/: chip_8.cpp  chip_8.hpp  main.cpp  platform.cpp  platform.hpp
